force-app/main/default/objects/FSM_WorkingSubAreaCoverage__c/FSM_WorkingSubAreaCoverage__c.object-meta.xml
<CustomObject>
    <description>Created as part of user story #SFS-32</description>
    <label>Working Sub Area Coverage</label>
    <nameField>
        <displayFormat>WSAC-{000000}</displayFormat>
        <label>Working Sub Area Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Working Sub Area Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>