force-app/main/default/objects/FSM_WorkingSubAreaCoverage__c/fields/FSM_EndDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_EndDate__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>