force-app/main/default/objects/FSM_WorkingSubAreaCoverage__c/fields/FSM_Polygon__c.field-meta.xml
<CustomField>
    <fullName>FSM_Polygon__c</fullName>
    <description>SFS-4514</description>
    <label>Polygon</label>
    <referenceTo>FSL__Polygon__c</referenceTo>
    <relationshipLabel>Working Sub Area Coverages</relationshipLabel>
    <relationshipName>FSM_WorkingSubAreaCoverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>