force-app/main/default/objects/FSM_WorkingSubAreaCoverage__c/fields/FSM_ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceResource__c</fullName>
    <description>Updated data type as part of SFS-4514</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Working Sub Area Coverages</relationshipLabel>
    <relationshipName>FSM_ServiceResources</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>