force-app/main/default/objects/FSM_WorkingSubAreaCoverage__c/fields/FSM_StartAndEndDateNotValid__c.field-meta.xml
<CustomField>
    <fullName>FSM_StartAndEndDateNotValid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFS-1196</description>
    <label>Start and End date not valid</label>
    <type>Checkbox</type>
</CustomField>