force-app/main/default/objects/FSM_WorkingSubAreaCoverage__c/fields/FSM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_StartDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>