force-app/main/default/objects/FSM_WorkingSubAreaCoverage__c/validationRules/FSM_StartAndEndDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_StartAndEndDateValidation</fullName>
    <active>true</active>
    <description>SFS-1196/SFS-1269</description>
    <errorConditionFormula>FSM_StartAndEndDateNotValid__c</errorConditionFormula>
    <errorMessage>The Sub Area Coverage Start and End is overlapping with another Area Coverage, please correct the start and end date and check polygon for avoiding duplicate entries.</errorMessage>
</ValidationRule>