force-app/main/default/objects/FSM_WorkingSubAreaCoverage__c/validationRules/FSM_StartDateMustBeEarlierThanEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>FSM_StartDateMustBeEarlierThanEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>FSM_EndDate__c  &lt;  FSM_StartDate__c</errorConditionFormula>
    <errorMessage>Start date must be earlier than End date</errorMessage>
</ValidationRule>