force-app/main/default/objects/FSM_WorkingSubAreaCoverage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FSM_Polygon__c</columns>
    <columns>NAME</columns>
    <columns>FSM_ServiceResource__c</columns>
    <columns>FSM_StartDate__c</columns>
    <columns>FSM_EndDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>